Align logo on scroll minor fix

--- a/assets/app/agiletechops/css/components.css
+++ b/assets/app/agiletechops/css/components.css
@@ -3196,7 +3196,7 @@ h1 {
     line-height: 0px; }
     .c-page-on-scroll.c-layout-header-fixed .c-layout-header .c-brand {
       transition: margin 0.2s;
-      margin: 22px 0 19px 0; }
+      margin: 10px 0 19px 0; }
       .c-page-on-scroll.c-layout-header-fixed .c-layout-header .c-brand .c-desktop-logo {
         display: none; }
       .c-page-on-scroll.c-layout-header-fixed .c-layout-header .c-brand .c-desktop-logo-inverse {
